# dotbridge-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/dotbridge/: Cargo.toml  build.rs
crates/dotbridge-derive/: Cargo.toml
crates/dotbridge-derive/src/: lib.rs
crates/dotbridge-sys/: Cargo.toml
crates/dotbridge-sys/examples/: test_hostfxr.rs
crates/dotbridge-sys/src/: coreclr_delegates.rs  error.rs  hostfxr.rs  lib.rs  loader.rs
crates/dotbridge/dotnet/DotBridgeBootstrap/: Compiler.cs  DotBridgeAssemblyLoadContext.cs  DotBridgeBootstrap.csproj  Invoker.cs  WireProtocol.cs
crates/dotbridge/examples/: assembly.rs  callback.rs  hello.rs
crates/dotbridge/src/: compiler.rs  error.rs  func.rs  lib.rs  marshal.rs  runtime.rs
crates/dotbridge/tests/: common.rs  test_callbacks.rs  test_csx.rs  test_derive.rs  test_errors.rs  test_marshaling.rs  test_patterns.rs  test_runtime_init.rs  test_rust2net.rs  test_stress.rs
